2013-07-26  Corey Minyard <minyard@acm.org>

	* dataxfer.c: Fix a bug in format strings where hex element (\x)
	would have the wrong values for a-f.  Pointed out by Galen Seitz.

2013-07-26  Corey Minyard <minyard@acm.org>

	* configure.ac: Version 2.9.

2013-07-25  Yegor Yefremov <yegorslists@googlemail.com>

	* Make RFC2217 signature configurable:
	Add '-s' option to configure default signature, that can be
	requested via RFC2217 protocol (option 0).
	Add per port signature via SIGNATURE keyword.

2013-06-29  Yegor Yefremov <yegorslists@googlemail.com>

	* dataxfer.c: The baudrate, that will be sent to the client,
	was converted twice: first with htonl() and then via copying
	to the buffer. As result 38400 was transfered as 6500960000
	instead of 6500009600.

2013-05-07  Corey Minyard <minyard@acm.org>

	* buffer.c: Add a buffer wrap that was missed, identified by
	Brian Rzycki.

2013-03-01  Corey Minyard <minyard@acm.org>

	* Makefile.am: Added 'ACLOCAL_AMFLAGS = -I m4' as suggested by
	libtoolize.

	* configure.in -> configure.ac

	* configure.ac: Add 'AC_CONFIG_MACRO_DIR([m4])' as suggested by
	libtoolize.

	* configure.ac: Version 2.8.

2013-02-28  Corey Minyard <minyard@acm.org>

	* dataxfer.c, readconfig.c: Properly handle an empty string passed
	as a banner, openstr, or closestr.

2013-01-29  Corey Minyard <minyard@acm.org>

	* utils.h, utils.c: Have scan_tcp_port() take the domain.

	* dataxfer.c, controller.c: If the socket open fails with
	EAFNOSUPPORT, retry the address with IF_INET (IPV4-only).  This
	way the call will still work even if IPV6 is disabled.

2012-12-19  Corey Minyard <minyard@acm.org>

	* README: Add info on how to generate configure and friends.

2012-12-13  Jordi Riera-Babures <jrierab@gmail.com>, Corey Minyard <minyard@acm.org>
	* devcfg.c: Add support for a bunch of high-speed baud rates.

2012-12-07  Corey Minyard <minyard@acm.org>

	* utils.c: Change hints.ai_family from AF_INET6 to AF_UNSPEC.